# blockprotocol

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .knip.jsonc  .markdownlint.json  .markdownlintignore  .nycrc.json  .prettierignore  .prettierignore-tmp  .prettierrc.cjs  .prettierrc.js  .yarnrc.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  codecov.yml  knip.jsonc  package.json  reverted-jest-runtime+29.1.2.patch  tsconfig.base.json  tsconfig.json  turbo.json  vercel.json
libs/@blockprotocol/type-system/crate/: .justfile  Cargo.toml  LICENSE.md  Makefile.toml  README.md  rust-toolchain.toml  rustfmt.toml  tsconfig.json
libs/@blockprotocol/type-system/crate/src/: lib.rs  utils.rs
libs/@blockprotocol/type-system/crate/src/ontology/: mod.rs
libs/@blockprotocol/type-system/crate/src/ontology/data_type/: error.rs  mod.rs  repr.rs  wasm.rs
libs/@blockprotocol/type-system/crate/src/ontology/entity_type/: error.rs  mod.rs  raw.rs  repr.rs  wasm.rs
libs/@blockprotocol/type-system/crate/src/ontology/entity_type/links/: error.rs  mod.rs  raw.rs  (+2 more)
libs/@blockprotocol/type-system/crate/src/ontology/property_type/: error.rs  mod.rs  raw.rs  repr.rs  wasm.rs
libs/@blockprotocol/type-system/crate/src/ontology/shared/: mod.rs  validate.rs
libs/@blockprotocol/type-system/crate/src/ontology/uri/: mod.rs  wasm.rs
libs/@blockprotocol/type-system/crate/src/ontology/url/: error.rs  mod.rs  wasm.rs
libs/@blockprotocol/type-system/crate/tests/: web.rs
libs/@blockprotocol/type-system/crate/tests/data/: lib.rs
libs/@blockprotocol/type-system/crate/tests/data/data_type/: boolean.json  empty_list.json  mod.rs  null.json  number.json  object_v1.json  text.json
libs/@blockprotocol/type-system/crate/tests/data/entity_type/: address.json  block.json  book.json  building.json  church.json  mod.rs  organization.json  page.json  person.json  playlist.json  song.json
libs/@blockprotocol/type-system/crate/tests/data/property_type/: age.json  contact_information.json  contrived_property.json  favorite_quote.json  interests.json  name.json  numbers.json  text.json  user_id_v1.json  user_id_v2.json
(+2422 files in other folders)
