[package]
name = "type-system"
version = "0.0.0"
edition = "2021"
authors = ["HASH"]
publish = false
description = "Definitions of types within the Block Protocol Type System"

[lib]
name = "type_system"
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1.6.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.32"
tsify = "0.4.2"
url = "2.2.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = 's'

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
